--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* HTML CSSResult Skip Results Iframe */
 :root {
   --v1: #be91c6;
